[package]
name = "arcium-indexer"
version = "0.1.0"
edition = "2021"
description = "High-performance persistent Merkle tree implementation for blockchain indexing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcium/indexer"
keywords = ["merkle-tree", "blockchain", "indexing", "persistence", "cryptography"]
categories = ["data-structures", "cryptography"]

[[bin]]
name = "demo"
path = "src/main.rs"

[lib]
name = "arcium_indexer"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"
solana-poseidon = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
flate2 = "1.0"
rmp-serde = "1.1"
postcard = "1.0"
memmap2 = "0.9"
tempfile = "3.8"
crc32fast = "1.3"
parking_lot = "0.12"
bitvec = "1.0"
digest = "0.10"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
